--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -523,6 +523,30 @@ div.mona-filter-menu-item {
     font-size: 13px;
 }
 
+.mona-grid-cell-editing {
+    & mona-text-box {
+        & div.mona-text-box {
+            border: none;
+        }
+        & input {
+            padding-left: 10px;
+            padding-right: 10px;
+            background: #242528; // TODO: use variable
+        }
+    }
+
+    & mona-numeric-text-box {
+        & div.mona-numeric-text-box {
+            border: none;
+        }
+        & input {
+            padding-left: 10px;
+            padding-right: 10px;
+            background: #242528; // TODO: use variable
+        }
+    }
+}
+
 
 /** Inputs */
 
