--- a/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <div class="mona-date-picker" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
     <mona-text-box [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString" (ngModelChange)="onDateStringEdit($event)" (inputBlur)="onDateInputBlur()">
         <ng-template monaTextBoxSuffixTemplate>
-            <button monaButton [flat]="true" (click)="onDateInputButtonClick()" [disabled]="disabled">
+            <button monaButton [flat]="true" (click)="onDateInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
                 <fa-icon [icon]="dateIcon"></fa-icon>
             </button>
         </ng-template>
