--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
@@ -4,10 +4,10 @@
            (blur)="inputBlur.emit($event)"
            autocomplete="off" tabindex="0" #valueTextBox>
     <div class="mona-numeric-text-box-spinners" *ngIf="spinners">
-        <button monaButton [disabled]="disabled" (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
+        <button monaButton [disabled]="disabled" [tabIndex]="-1" (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
             <fa-icon [icon]="increaseIcon"></fa-icon>
         </button>
-        <button monaButton [disabled]="disabled" (mousedown)="spin$.next('-')" (mouseup)="spinStop$.next()">
+        <button monaButton [disabled]="disabled" [tabIndex]="-1" (mousedown)="spin$.next('-')" (mouseup)="spinStop$.next()">
             <fa-icon [icon]="decreaseIcon"></fa-icon>
         </button>
     </div>
