--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -1,11 +1,17 @@
+:host {
+    display: block;
+    height: 100%;
+}
+
 div.mona-grid-cell {
     padding: 8px 10px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     outline: none;
+    height: 100%;
 }
 
 div.mona-grid-cell-editing {
-    padding: 0;
+    padding: 1px;
 }
