--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -12,6 +12,7 @@ div.mona-grid-list {
 table {
     border-collapse: collapse;
     width: 100%;
+    height: 100%;
     table-layout: fixed;
 
     & tbody {
@@ -33,6 +34,7 @@ table {
     }
 
     & td {
+        position: relative;
         &:not(:last-child) {
             border-right: 1px solid var(--mona-border-color);
         }
