--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -8,7 +8,8 @@
             </colgroup>
             <tbody>
                 <ng-container *ngIf="gridService.groupColumns.length === 0">
-                    <tr *ngFor="let row of data" (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}">
+                    <tr *ngFor="let row of data; let rx=index;" (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}"
+                        [attr.data-ruid]="row.uid" [attr.data-row-view-index]="rx">
                         <td *ngFor="let column of columns">
                             <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                         </td>
@@ -36,7 +37,8 @@
                                     </ng-container>
                                 </ng-container>
                                 <ng-container *ngIf="depth===gridService.groupColumns.length-1 && !subGroup.collapsed">
-                                    <tr *ngFor="let row of subGroup.rows" (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}">
+                                    <tr *ngFor="let row of subGroup.rows; let rx=index;" (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}"
+                                        [attr.data-ruid]="row.uid" [attr.data-row-view-index]="rx">
                                         <td *ngFor="let _ of gridService.groupColumns"></td>
                                         <td *ngFor="let column of columns">
                                             <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
