--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~dist/mona-ui/styles/mona-dark";
+@import "dist/mona-ui/styles/mona-dark";
 
 html, body {
     width: 100%;
