--- a/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.scss
@@ -6,7 +6,6 @@
 div.mona-tab-strip {
     width: 100%;
     height: 100%;
-    //background: var(--mona-background);
     border: 1px solid var(--mona-border-color);
 }
 
@@ -18,9 +17,15 @@ div.mona-tab-strip-tabs {
     display: flex;
 }
 
+div.mona-tab-list-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: var(--mona-background-dark);
+}
+
 ul.mona-tab-list {
     list-style-type: none;
-    width: 100%;
     height: 100%;
     display: flex;
     cursor: default;
@@ -28,7 +33,6 @@ ul.mona-tab-list {
     font-size: 12px;
     white-space: nowrap;
     overflow: hidden;
-    background: var(--mona-background-dark);
     & li {
         list-style-type: none;
         height: 100%;
@@ -38,10 +42,8 @@ ul.mona-tab-list {
         color: var(--mona-text);
         border-right: 1px solid var(--mona-border-color);
         cursor: pointer;
-        //padding: 5px 20px;
         &.mona-tab-active {
             font-weight: bold;
-            //border-bottom: 1px solid transparent;
             background: var(--mona-background);
             color: var(--mona-primary);
         }
