--- a/projects/mona-ui/styles/mona.scss
+++ b/projects/mona-ui/styles/mona.scss
@@ -2,20 +2,29 @@
 
 :root {
     --mona-active-shadow: 0 0 10px -3px var(--mona-shadow-color);
+
     --mona-background: #1C1D1F;
+    --mona-background-hover: #1F2022;
+    --mona-background-active: #232427;
+
     --mona-background-dark: #161719;
     --mona-background-darker: #0B0C0E;
     --mona-background-darker-2: #000000;
     --mona-background-light: #232427;
     --mona-background-lighter: #3E3F41;
+
     --mona-border-color: #101114;
     --mona-focus-border-color: darkgray;
+
     --mona-input-height: 30px;
-    --mona-primary: #3949ab;
-    --mona-primary-dark: #303f9f;
-    --mona-primary-light: #3f51b5;
+
+    --mona-primary: #595fa4;
+    --mona-primary-dark: #3d4171;
+    --mona-primary-light: #6d75ca;
+
     --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
     --mona-shadow-color: #101114;
+
     --mona-text: #CCCCCC;
     --mona-text-light: #FFFFFF;
 }
