--- a/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.html
@@ -1,7 +1,7 @@
 <div class="mona-time-picker" #popupAnchor>
     <mona-text-box [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString" (ngModelChange)="onDateStringEdit($event)" (inputBlur)="onTimeInputBlur()">
         <ng-template monaTextBoxSuffixTemplate>
-            <button monaButton [flat]="true" (click)="onTimeInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
+            <button monaButton [flat]="false" (click)="onTimeInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
                 <fa-icon [icon]="timeIcon"></fa-icon>
             </button>
         </ng-template>
