--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -15,7 +15,7 @@ div.side-bar {
     width: 350px;
     height: 100%;
     //border-right: 1px solid var(--mona-border-color);
-    background: #2C2C2C;
+    background: #202020;
     padding: 20px 10px;
 }
 
@@ -31,6 +31,7 @@ div.content {
         margin: 5px;
         display: flex;
     }
+    background: var(--mona-background-light);
 }
 
 mona-drop-down-list {
