fix: update check box and raido button styles

--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -9,7 +9,7 @@ html, body {
     scroll-behavior: smooth;
 }
 
-body { font-size: 0.75rem; }
+//body { font-size: 0.75rem; }
 
 body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
