--- a/projects/mona-ui/src/lib/pager/components/pager/pager.component.html
+++ b/projects/mona-ui/src/lib/pager/components/pager/pager.component.html
@@ -1,6 +1,6 @@
 <div class="mona-pager">
     <ng-container *ngIf="type==='numeric'">
-        <ol class="mona-pager-list">
+        <ol class="mona-pager-list" *ngIf="pageListVisible()">
             <li *ngIf="firstLast">
                 <button monaButton [flat]="true" (click)="onPageClick(1)" [disabled]="page===1">
                     <fa-icon [icon]="firstPageIcon"></fa-icon>
@@ -42,23 +42,23 @@
                     <fa-icon [icon]="lastPageIcon"></fa-icon>
                 </button>
             </li>
-            <li>
+            <li *ngIf="pageInputVisible()">
                 <mona-numeric-text-box [spinners]="false" [min]="1" [max]="pageCount" [(value)]="inputValue"
                                        (inputBlur)="onPageInputBlur()" *ngIf="pageInput"></mona-numeric-text-box>
             </li>
-            <li *ngIf="pageSizeValueList.length !== 0">
+            <li *ngIf="pageInputVisible() && pageSizeValueList.length !== 0">
                 <mona-drop-down-list [data]="pageSizeValueList" [value]="pageSize"
                                      (valueChange)="onPageSizeValueChange($event)" #pageSizeDropdownList></mona-drop-down-list>
                 <span>items per page</span>
             </li>
         </ol>
-        <div class="mona-pager-info">
+        <div class="mona-pager-info" *ngIf="infoVisible()">
             <span>{{currentPageDataCountStart}} - {{currentPageDataCountEnd}} of {{total}} items</span>
         </div>
     </ng-container>
     <ng-container *ngIf="type==='input'">
         <div class="mona-pager-input">
-            <ol class="mona-pager-list">
+            <ol class="mona-pager-list" *ngIf="pageListVisible()">
                 <li *ngIf="firstLast">
                     <button monaButton [flat]="true" (click)="onPageClick(1)" [disabled]="page===1">
                         <fa-icon [icon]="firstPageIcon"></fa-icon>
@@ -88,8 +88,35 @@
                 </li>
             </ol>
         </div>
-        <div class="mona-pager-info">
+        <div class="mona-pager-info" *ngIf="infoVisible()">
             <span>{{(page-1)*pageSize+1}} - {{page*pageSize > total ? total : page*pageSize}} of {{total}} items</span>
         </div>
+    </ng-container>
+    <ng-container *ngIf="!pageListVisible()">
+        <ol class="mona-pager-list">
+            <li *ngIf="firstLast">
+                <button monaButton [flat]="true" (click)="onPageClick(1)" [disabled]="page===1">
+                    <fa-icon [icon]="firstPageIcon"></fa-icon>
+                </button>
+            </li>
+            <li *ngIf="previousNext">
+                <button monaButton [flat]="true" [disabled]="page<=1" (click)="onPreviousPageClick()">
+                    <fa-icon [icon]="previousIcon"></fa-icon>
+                </button>
+            </li>
+            <li>
+                <mona-drop-down-list [data]="pageList()" [value]="page" (valueChange)="onPageClick($event)" style="width: 75px;"></mona-drop-down-list>
+            </li>
+            <li *ngIf="previousNext">
+                <button monaButton [flat]="true" [disabled]="page < 1 || page === pageCount" (click)="onNextPageClick()">
+                    <fa-icon [icon]="nextIcon"></fa-icon>
+                </button>
+            </li>
+            <li *ngIf="firstLast">
+                <button monaButton [flat]="true" (click)="onPageClick(pageCount)" [disabled]="page===pageCount">
+                    <fa-icon [icon]="lastPageIcon"></fa-icon>
+                </button>
+            </li>
+        </ol>
     </ng-container>
 </div>
